[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Chris Wininger <cwininger@sonatype.com>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
